correções finais, assim espero
